Add method to check if strong biometric authentication is available or not.
Hide or show setting for authentication based on the value.

Tested:
Tested on mobile.

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -18,7 +18,9 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory app:title="@string/authentication_header">
+    <PreferenceCategory
+        app:key="@string/authentication_header_key"
+        app:title="@string/authentication_header">
 
         <SwitchPreferenceCompat
             app:key="@string/biometric_key"
